# python-base-template

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dispatch_workflow.py  pull_request_template.md
.github/workflows/: black.yml  ci-dev.yml  ci-prod.yml  ci-staging.yml  formatting.yml  linters.yml  prepare-release.yml  pylint.yml  superlint.yml  test-cov.yml  tests.yml  tests_and_checks.yml
myproject/: health_check.py  main.py
project/: pr.py
tests/: test_project.py
