[tool.poetry]
name = "python-base-template"
version = "0.1.0"
description = "Project description"
authors = ["Raman <roman.s@p2p.org>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
pytest-cov = "^3.0.0"
prometheus-client = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
